<resources>
    <string name="app_name">Tintern Ship</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="looking_for">I am looking for a</string>

    <string name="internship_description">Internship job description</string>
    <string name="your_education">Your education</string>
    <string name="searched_education">Education were looking for</string>
    <string name="add_project">+ Add internship job description</string>
    <string name="save_changes">Save changes</string>
    <string name="company_name">Company name</string>

    <string name="manage_jobs">Add jobs</string>
    <string name="internship">Internship</string>
    <string name="company">Company</string>
    <string name="go_to_login_page">Already have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_profile">Create profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="about_myself">About my self</string>
    <string name="about_the_company">About the company</string>
    <string name="phone_number">Phone number</string>
    <string name="upload_profile_picture">Upload profile picture</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>