<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.account_management.DecideUserTypeActivity"
    android:background="@color/secondary_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/looking_for"
        android:textColor="@color/primary_text_color"
        android:textSize="26sp" />

    <Button
        android:id="@+id/registerAsCompany"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_color"
        android:background="@drawable/rounded_button"
        android:text="@string/internship" />
    <Button
        android:id="@+id/registerAsIntern"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_color"
        android:background="@drawable/rounded_button"
        android:text="@string/company" />
</LinearLayout>