<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    android:orientation="vertical">

    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_color"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/internship_description" />


    <TextView
        android:layout_marginLeft="20dp"
        android:layout_gravity="left|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internship_description"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/aboutTheCompany"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rounded_primary_text_color"
        android:theme="@style/MyEditTextTheme"
        android:ems="10"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_gravity="left|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searched_education"
        android:textColor="@color/primary_text_color"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/dropdown"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:text="@string/internship_description"
        android:textColor="@color/primary_text_color"
        android:background="@color/primary_color"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addInternshipProject"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text_color"
        android:background="@drawable/rounded_button"
        android:text="@string/add_project" />
    <ListView
        android:id="@+id/companyProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:dividerHeight="0dp"
    android:divider="@null"/>

</LinearLayout>
